# MakiseGUI

./: .gitignore  CMakeLists.txt  LICENSE  Readme  Readme.md  makefile
MakiseGUI/: CMakeLists.txt  HEADERS  SOURCES  makise.c  makise.h  makise_bitmap.c  makise_bitmap.h  makise_colors.c  makise_colors.h  makise_config.h  makise_config.h.template  makise_gui.h  makise_gui_container.h  makise_gui_elements.c  makise_gui_elements.h  makise_primitives.c  makise_primitives.h  makise_primitives_default_drawer.c  makise_text.c  makise_text.h
MakiseGUI/ILI9340C/: ili9340.c  ili9340.h  ili9340_registers.h
MakiseGUI/docs/: architecture_dia.odg  colors_ru.md  exec_order.md  focus_ru.md  input_system_ru.md
MakiseGUI/drivers/ILI9340C/: ili9340.c  ili9340.h  ili9340.h.example  ili9340_registers.h
MakiseGUI/drivers/SDL2/: makise_sdl2.c  makise_sdl2.h
MakiseGUI/fonts/: Arial12.c  Arial12.c.b  Arial15.c  Arial16.c  Arial24.c  Default10x20.c  Default5x7.c  Default6x10.c  Default8x13.c  fonts.c  fonts.h
MakiseGUI/gui/: makise_gui.c  makise_gui.h  makise_gui_container.c  makise_gui_container.h  makise_gui_elements.c  makise_gui_elements.h  makise_gui_events.c  makise_gui_events.h  makise_gui_input.c  makise_gui_input.h  makise_gui_interface.c  makise_gui_interface.h
MakiseGUI/gui/elements/: makise_e.c  makise_e.h  makise_e_buttons.c  makise_e_canvas.c  makise_e_lable.c  makise_e_slider.c  makise_e_slist.c  makise_e_tabs.c  makise_e_text_field.c  makise_e_toggle.c
MakiseGUI/gui/elements/inc/: makise_e_buttons.h  makise_e_canvas.h  (+12 more)
MakiseGUI/gui/styles/: makise_style.h
(+29 files in other folders)
